app/assets/stylesheets/home.css.sass
$headerHeight: 100px
$headerSmallHeight: 60px
$itemHeight: 95px
$itemWidth: 1000px
$titleHeight: 77px
$containerWidth: 1200px
$sidebarWidth: 200px

$fontBase: 'Helvetica Neue', Helvetica, Roboto, Arial, sans-serif

$lightGray: #B6B6B6
$darkGray: #5C5C5C
$orange: #FF742B

$sidebarColor: #F8F8F8
$linkColor: #5A96B1

html, body
  height: 100%
  margin: 0
  padding: 0
  color: $lightGray
  font-family: $fontBase

.container
  width: $containerWidth
  margin: 0 auto
.page-header
  position: fixed
  z-index: 150
  width: $containerWidth
  height: 100px
  padding: 20px
  border-bottom: solid 1px #eee
  background-color: white
  .col-1, .col-2, .col-3
    float: left
    margin: 0
    padding: 0
  .col-1
    width: 22%
  .col-2
    width: 23%
  .col-3
    width: 55%
    padding-top: 5px
    text-align: right
  .logo
    color: $lightGray
    img
      float: left
      height: 60px
      margin-right: 10px
    .logo-name
      float: left
      padding-top: 3px
      line-height: 1.2em
      font-size: 22px
      color: $lightGray
  .navigation
    ul
      position: relative
      top: 15px
    li
      margin-right: 20px
      padding-bottom: 5px
      cursor: pointer
      &.active
        font-weight: bold
        border-bottom: solid 2px $orange
  .powered-by
    font-size: 12px
    display: inline-block
    img
      width: 60px
      position: relative
      top: 1px
      vertical-align: bottom
.clearfix
  *zoom: 1
  &:before,
  &:after
    display: table
    content: ""
    line-height: 0
  &:after
    clear: both

//common
ul.list-inline
  display: inline-block
  li
    display: inline-block

.fade
  opacity: 0
  @include transition(opacity .15s linear)
  &.in
    opacity: 1

.text-center
  text-align: center

h1, h2, h3, h4, h5
  font-weight: 200

.main
  float: left
  position: relative
  width: 100%
  min-height: 800px
  margin-top: 100px
  padding: 78px 0 50px 200px
  header
    position: absolute
    z-index: 110
    top: 0px
    left: 200px
    width: 1000px
    padding: 20px 30px
    border-bottom: solid 1px #eee
    background-color: white
    h1
      display: inline-block
      margin-right: 10px
      font-size: 25px
      color: $darkGray
    .search-infos
      display: inline-block
      color: #ccc
    .btn-refresh
      width: 30px
      height: 30px
      line-height: 30px
      text-align: center
      padding: 0
      background-color: white
      border: solid 1px #eee
      color: #ccc
      position: relative
      top: -5px
      margin-right: 4px
      &:hover
        border-color: #ccc
        color: $orange
      &:active
        border-color: $orange
      &:focus
        box-shadow: none
        outline: 0
    .date-range-filter
      position: absolute
      right: 15px
      top: 28px
      label
        margin-left: 20px
        font-size: 12px
        font-weight: normal
        white-space: nowrap
      input
        &.radio:empty
          margin-left: -9999px
        &.radio:empty ~ label
          float: left
          position: relative
          line-height: 23px
          text-indent: 30px
          cursor: pointer
          @include user-select(none)
        &.radio:empty ~ label:before
          position: absolute
          display: block
          top: 0
          bottom: 0
          left: 0
          content: ''
          height: 20px
          width: 20px
          border: solid 1px #ccc
          line-height: 20px
          border-radius: 50%
        &.radio:checked ~ label:before
          box-shadow: inset 0 0 0 6px white, inset 0 0 0 10px $orange
        &.radio:focus ~ label:before
          box-shadow: inset 0 0 0 6px white, inset 0 0 0 10px $orange
  h2
    display: inline-block
    margin-top: 1em
    font-size: 20px
    color: $darkGray

  .sidebar
    position: absolute
    top: 0
    bottom: 0
    left: 0
    width: 200px
    background-color: $sidebarColor
    ul
      position: relative
      display: block
      height: 100%
      padding: 20px 0
      li
        float: left
        width: 100%
        a
          display: block
          width: 100%
          padding: 10px 20px
          color: $darkGray
          &.active
            background-color: #E4E3E5
        i
          margin-right: 10px
        &.divider
          margin: 10px 0
          padding: 0
          border-bottom: solid 1px #eee
        &.settings
          position: absolute
          bottom: 0
          right: 0
          left: 0
          text-align: center
          background-color: darken($sidebarColor,3%)
  .edit-settings
    margin-top: $titleHeight
    padding: 10px

.main-fixed
  .main
    padding-top: 0
    header
      position: fixed
      top: $headerHeight
      left: 50%
      width: $itemWidth
      margin-left: - $containerWidth/2 + $sidebarWidth
    .sidebar
      position: fixed
      top: 100px
      left: 50%
      width: $sidebarWidth
      margin-left: - $containerWidth/2
    .search-results
      padding-top: 78px

.search-wrapper
  display: inline-block
  position: relative
  margin-right: 10px
  .icon-search
    color: $orange
    position: absolute
    top: 8px
    right: 14px
    font-size: 24px
  input
    width: 450px
    border-radius: 25px
    box-shadow: none
    line-height: 25px
    @include placeholder
      color: #ccc
      font-size: 14px
      font-weight: 300

.search-results
  position: relative
  background: white
  .item
    border-bottom: solid 1px #eee
    position: relative
    padding: 0
    .item-main
      display: block
      width: $itemWidth
      min-height: $itemHeight
      padding: 20px 30px 0
      background-color: white
    &.item-fixed // sticked item
      padding-top: $itemHeight
      .item-main
        position: fixed
        z-index: 150
        top: $headerHeight + $titleHeight
        width: $itemWidth
        height: $itemHeight
        box-shadow:  0 1px 0 rgba(0,0,0,.2), 0 3px 0 rgba(0,0,0,.1)
    &.item-show-comments
      // background-color: red
    &.item-absolute-bottom //end of stick transition state
      padding-top: $itemHeight
      .item-main
        position: absolute
        left: 0
        bottom: 0
        width: $itemWidth
    h2
      float: left
      margin-top: 5px
      font-size: 16px
      font-weight: normal
      a
        color: $darkGray
      em
        font-style: normal
        font-weight: bold
    .item-thumbnail
      float: left
      width: 55px
      padding: 3px
      margin-right: 15px
      border: solid 1px #eee
      border-radius: 3px
    .item-title-and-infos
      float: left
    .item-infos
      float: left
      clear: both
      li
        margin-right: 10px
      i
        position: relative
        top: 2px
        font-size: 14px
    .item-avatar
      display: inline-block
      width: 16px
      height: 16px
      margin-right: 2px
      text-align: center
      line-height: 16px
      color: white
      text-transform: capitalize
      font-weight: 500
      font-size: 12px
      border-radius: 3px
    .item-actions
      float: right
      font-size: 12px
      position: relative
      top: 14px
      a
        color: $orange
        i
          margin-left: 20px
          font-size: 18px
        &:hover
          i
            color: $orange
    a.hit-link
      font-size: 12px
      color: $linkColor
    .author
      display: inline-block
      font-size: 13px
      margin-bottom: 6px
      color: $lightGray
    .date
      font-size: 12px
      color: $lightGray
    .item-comments
      font-size: 12px
    .starred
      i
        color: $orange
    [class^="icon-"], [class*=" icon-"]
      color: $lightGray
  ul.list-item-comments
    padding: 0 0 20px 50px
    color: $darkGray
    > li
      padding: 15px 0 10px 0
      border-bottom: solid 1px #EEEEEE
      &:last-child
        border: none
    .replies-list
      margin-bottom: 15px
    ul
      display: block
      margin: 0 0 0 5px
      padding: 8px 0 0 15px
      border-left: solid 1px #ccc
    .reply-container
      padding-left: 8px
      p
        margin-bottom: 4px
      a
        color: #517B91
  .search-pagination
    margin-top: 20px
    text-align: center
    background-color: white
    li
      display: inline-block
      button
        margin: 3px
        padding: 5px 10px
        font-size: 12px
        text-align: center
        background: transparent
        color: $lightGray
        font-weight: normal
        border: 1px solid $lightGray
        outline: none
      &.active
        button
          border-color: $orange
          color: $orange

.no-results
  width: $itemWidth / 2
  margin: 0 auto
  padding: 50px 0
  ul
    padding: 0 0 0 20px
    text-align: left
    li
      line-height: 2em

.small-header
  .page-header
    @include transition(all 0.5s ease)
    height: $headerSmallHeight
    padding: 5px
    .logo
      img
        @include transition(all 0.5s ease)
        height: 45px
      .logo-name
        font-size: 18px
  .main
    margin-top: $headerSmallHeight
    header
      top: $headerSmallHeight
    .sidebar
      top: $headerSmallHeight
    .item-fixed
      .item-main
        top: $headerSmallHeight + $titleHeight

.page
  margin-top: $titleHeight
  padding: 10px
  pre
    background: white
    border: 1px solid $lightGray
    font-size: 12px

footer
  margin-top: 50px
  text-align: center
  a
    color: $lightGray
    font-size: 12px

